--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
@@ -103,11 +103,18 @@ En la especificación IEEE 802 no solo se especifican los distintos protocolos y
 - **10BASE-T**: Utiliza par trenzado no apantallado en una topología en estrella. Dada la alta velocidad y la baja calidad de las transmisiones sobre este tipo de cable, la longitud de cada enlace se restringe a 100 m. Como alternativa se puede utilizar un enlace de fibra óptica, en cuyo caso la longitud máxima es de 500 m.
 - **10BASE-F**: Contiene tres especificaciones: una topología en estrella pasiva para la interconexión de estaciones y repetidores con segmentos de hasta 1 km de longitud; un enlace punto a punto que puede ser usado para conectar estaciones o repetidores separados hasta 2 km; y un enlace punto a punto que puede usarse para conectar repetidores a una distancia máxima de 2 km.
 
-Además de estas alternativas, existen varias versiones que funcionan a 100 Mbps, 1 Gbps y 10 Gbps, que serán estudiadas más adelante en esta sección. La
-designación genérica para estos estándares es 100BASE-T. El comité definió varias alternativas para diferentes medios de transmisión.
-Todas las opciones 100BASE-T usan el protocolo MAC y el formato de la trama Ethernet. Mientras que 100BASE-X identifica al conjunto de opciones que usan las especificaciones del medio físico definidas originalmente para ***FDDI (Fiber Distributed Data Interface)***. Todos los esquemas 100BASE-X emplean dos enlaces físicos entre los nodos, uno para transmisión y otro para recepción, este tipo de redes pueden hacer uso de *pares trenzados apantallados (STP)* o *pares trenzados no apantallados (UTP)* de alta calidad (categoría 5), mientras que 100BASE-FX hace uso de fibra óptica. Por otro lado, 100BASE-T4 define una alternativa menos costosa que puede utilizar UTP de voz de categoría 3 además de UTP de categoría 5 de alta calidad. Para alcanzar los 100 Mbps en cables de baja calidad, 100BASE-T4 especifica el uso de 4 líneas de par trenzado entre los nodos, de los cuales tres se usan simultáneamente para la transmisión de datos en una dirección.
+Además de estas alternativas, existen varias versiones que funcionan a 100 Mbps, 1 Gbps y 10 Gbps. Todas las opciones 100BASE-T usan el protocolo MAC y el formato de la trama Ethernet. Mientras que 100BASE-X identifica al conjunto de opciones que usan las especificaciones del medio físico definidas originalmente para ***FDDI (Fiber Distributed Data Interface)***. Todos los esquemas 100BASE-X emplean dos enlaces físicos entre los nodos, uno para transmisión y otro para recepción, este tipo de redes pueden hacer uso de *pares trenzados apantallados (STP)* o *pares trenzados no apantallados (UTP)* de alta calidad (categoría 5), mientras que 100BASE-FX hace uso de fibra óptica. Por otro lado, 100BASE-T4 define una alternativa menos costosa que puede utilizar UTP de voz de categoría 3 además de UTP de categoría 5 de alta calidad. Para alcanzar los 100 Mbps en cables de baja calidad, 100BASE-T4 especifica el uso de 4 líneas de par trenzado entre los nodos, de los cuales tres se usan simultáneamente para la transmisión de datos en una dirección.
 
 ![[especificacion-fisica-ethernet.png]]
+
+El mismo estándar define varias especificaciones para Gigabit Ethernet, cada una con características específicas en cuanto al tipo de cable, la distancia máxima que pueden cubrir y el medio de transmisión utilizado.
+
+1. **1000BASE-T**: Utiliza cable UTP de categoría 5e o superior (Cat 5e, Cat 6, Cat 6a). Este tipo de cableado permite una distancia máxima de 100 metros, utilizando señales eléctricas transmitidas a través de los cuatro pares de cables trenzados.
+2. **1000BASE-CX**: Utiliza cable STP y está especialmente diseñada para conexiones cortas en entornos industriales y permite cubrir distancias de hasta 25 metros, proporcionando una mayor protección contra interferencias electromagnéticas.
+3. **1000BASE-SX**: Utiliza fibra óptica multimodo. Este tipo de conexión es adecuado para distancias intermedias, con un alcance que varía entre 220 y 550 metros, dependiendo del tipo de fibra utilizada. La transmisión se realiza a través de luz láser de onda corta, específicamente a 850 nm.
+4. **1000BASE-LX**: Utiliza fibra óptica, pero puede operar tanto en fibra multimodo como en fibra monomodo. En el caso de la fibra multimodo, la distancia máxima es de 550 metros, mientras que con fibra monomodo puede alcanzar hasta 5 kilómetros. La transmisión en este caso se realiza mediante luz láser de onda larga, a 1310 nm.
+
+Cada una de estas especificaciones está diseñada para diferentes entornos y necesidades, desde redes locales con cables de cobre hasta conexiones de mayor distancia utilizando fibra óptica.
 
 ## Token Ring
 
