--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
@@ -63,7 +63,7 @@ El estándar evaluó dos enfoques para los algoritmos MAC, los protocolos de acc
 >Los protocolos de acceso distribuido son adecuados para redes ad hoc y otras configuraciones de LAN inalámbricas con tráfico intermitente. Mientras que los protocolos de acceso centralizado son ideales para redes con estaciones interconectadas a través de una estación base que sirve de enlace con una LAN troncal y son beneficiosos para datos de alta prioridad o con requisitos de tiempo real.
 
 El resultado final definido en el estándar es el algoritmo llamado ***DFWMAC (Distributed Foundation Wireless MAC)***, que combina un control de acceso distribuido con un control centralizado opcional. La subcapa MAC inferior, la ***función de coordinación distribuida (DCF)***, utiliza un algoritmo de contención para gestionar el acceso general. Para tráfico prioritario y sin contención, se utiliza la ***función de coordinación puntual (PCF)***, que se sitúa sobre la DCF y aprovecha sus características para garantizar el acceso a sus usuarios.
-La subcapa DCF utiliza CSMA para acceder al medio de comunicación. No incluye detección de colisiones porque en redes inalámbricas es difícil diferenciar entre señales débiles y ruido. Para gestionar el acceso y evitar colisiones, esta subcapa utiliza retardos basados en el ***espacio entre tramas (IFS)***, con diferentes valores para manejar prioridades:
+La subcapa DCF utiliza ***CSMA/CA*** para acceder al medio de comunicación, este protocolo de acceso al medio intenta evitar las colisiones al máximo. No incluye detección de colisiones porque en redes inalámbricas es difícil diferenciar entre señales débiles y ruido. Para gestionar el acceso y evitar colisiones, esta subcapa utiliza retardos basados en el ***espacio entre tramas (IFS)***, con diferentes valores para manejar prioridades:
 
 1. **SIFS (Short IFS):** El más corto, usado para respuestas rápidas como confirmaciones y asegura la prioridad más alta en la transmisión.
 2. **PIFS (Point Coordination Function IFS):** De longitud media, usado por el controlador central en PCF para emitir sondeos y tiene prioridad sobre el tráfico normal.
@@ -84,6 +84,8 @@ Si bien existen tres tipos de tramas, el formato genérico de una trama MAC para
 - **Control de secuencia**: Contiene un subcampo de 4 bits utilizado para la fragmentación y el reensamblado, y un número de secuencia de 12 bits utilizado para numerar las tramas enviadas entre un transmisor dado y un receptor.
 - **Cuerpo de la trama**: Contiene una MSDU completa o un fragmento de la misma. La MSDU es una unidad de datos del protocolo LLC o información de control MAC.
 - **Secuencia de comprobación de trama**: Se trata de una comprobación de redundancia cíclica de 32 bits.
+
+![[trama-wifi.png]]
 
 #### Tipos de Trama 
 
@@ -134,3 +136,23 @@ Esta etiqueta identifica la VLAN a la que está destinada la trama. Al enviar un
 >- **Identificador de Protocolo de Etiquetado (TPID)**: Campo de 2 bytes, con un valor hexadecimal fijo de 81-00.
 >- **Control de Etiquetado (Tag Control Information)**: Campo de 2 bytes, el cual incluye un campo identificador de VLAN de 12 bits y un campo de prioridad de 3 bits, cuya función es similar a la del campo TOS en los datagramas IP.
 
+Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a traslados, adiciones y cambios en la red, un mejor control de multidifusión (broadcast) y una mayor seguridad tanto a nivel de grupo de trabajo como de red. Sin embargo, también presentan ciertas desventajas, como la necesidad de una configuración cuidadosa por software y el hecho de que cada switch o router debe invertir recursos de procesamiento para revisar el etiquetado de cada trama VLAN.
+
+## World Interoperability for Microwave Access (WiMAX)
+
+WiMAX es una familia de estándares IEEE 802.16 que trata de suministrar datos inalámbricos a un gran número de usuarios en un área extensa, a velocidades capaces de competir con las de los modems por cable y las redes ADSL.
+La arquitectura básica propuesta en el estándar consta de una estación base que centraliza un número potencialmente grande de clientes, en este sentido es similar a una red WiFi. La estación base coordina la transmisión de los paquetes de la capa de enlace de forma bidireccional, es decir, desde el emisor al receptor y viceversa. Todo esto utilizando multiplexación por división de tiempo, aunque el tamaño de los marcos son variables, ya que al momento de la transmisión la estación base envía un listado de mensajes ***MAP (Media Access Protocol)*** que informa a las estaciones receptoras las propiedades de la capa física que se utilizarán para transmitir las subsiguientes ráfagas de tramas dentro de la estructura de marcos.
+Puede que la estación base decida cambiar las propiedades de la capa física actuales por otras que se adapten mejor a las capacidades actuales de los receptores, además la estación base también puede seleccionar de forma arbitraria a un conjunto de receptores a los que se le va a enviar tanto la configuración como las ráfagas de tramas. Este método de *planificación optimista* permite hacer un uso óptimo del medio.
+Una estación base WiMAX también regula el acceso de las estaciones de abonado al canal ascendente mediante el uso de mensajes ***UL-MAP***. Estos mensajes controlan la cantidad de tiempo durante la cual se da a cada estación de abonado acceso al canal en los subsiguientes canales ascendentes. Los abonados emplean las partes iniciales de la estructura de canal ascendente para transmitir mensajes de control del enlace radio, mensajes para solicitar la admisión y la autenticación en la red WiMAX y mensajes de protocolos de mayor nivel relacionados con la administración, como por ejemplo DHCP y SNMP.
+
+>[!tldr] Limitaciones al Medio Físico y las Políticas de Acceso al Medio
+>El estándar WiMAX no impone un conjunto concreto de parámetros de la capa física que haya que utilizar en una situación determinada; dicha decisión se deja al arbitrio del fabricante del equipo WiMAX y del operador de red. Lo mismo sucede con las políticas para asignar el tiempo de canal ascendente a los nodos, en este caso WiMAX solo proporciona los mecanismos para implementar una política que podría asignar diferentes periodos de tiempo de acceso al canal a las distintas estaciones de abonado.
+
+El formato de la trama para las redes WiMAX es el que se muestra en la imagen, el único campo sobre el que hablaremos es del campo identificador de conexión. En WiMAX las direcciones MAC de los dispositivos se puede considerar más apropiadamente como un identificador del equipo, ya que la comunicación entre equipos terminales termina por ser asignada a un identificador de conexión.
+
+![[trama-wimax.png]]
+
+## Bluetooth
+
+El estándar IEEE 802.15 define un tipo de red inalámbrica de corto alcance, que opera a una baja potencia y a un bajo coste. Al contrario de las redes definidas por la IEEE 802.11 que poseen un punto de acceso, mayor potencia y una mayor velocidad, tecnologías como Bluetooth no requieren de ningún tipo de infraestructura para operar y posee un alcance más reducido, por esta razón suele referirse a este tipo de redes como redes inalámbricas de área personal (WPAN).
+Estas redes operan en la banda de radio sin licencia de 2,4 GHz en forma TDM, con particiones de tiempo de 625 microsegundos. Durante cada partición de tiempo, un emisor transmite en uno de 79 canales, cambiando el canal de una partición a otra de forma pseudoaleatoria. Este tipo de saltos de canal, que es una técnica conocida con el nombre de ***espectro disperso por salto de frecuencia (FHSS)***. Este tipo de redes son por definición redes ad hoc que puede organizarce en una *piconet* de hasta ocho dispositivos, donde se designa a uno de los dispositivos como maestro, este nodo maestro es el que designa el tiempo de transmisión para cada nodo. Los nodos restantes solo podrán transmitir si tienen permiso del nodo maestro, además solo se podrá enviar datos al nodo maestro.
