--- a/4º Año/Comunicaciones y Redes/Unidad 5/5. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/5. Medios de Transmision y Hardware de Red.md
@@ -94,5 +94,6 @@ Los conmutadores o switches son dispositivos que soporta múltiples segmentos y 
 Tanto los conmutadores como los puentes tiene la capacidad de construir de forma automática sus tablas de direccionamiento, evitando así que los administradores y/o usuarios tengan que configurar el dispositivo de forma manual.
 Si bien tanto el switch como el puente pertenecen al segundo nivel del modelo OSI y comparten muchas similitudes, la principal diferencia es que los conmutadores realizan la conmutación de las tramas por hardware otorgando todo el ancho de banda a cada host para realizar la transmisión de las tramas evitando al máximo las colisiones, lo que permite tener muchos más nodos conectados de forma simultánea.
 
->[!tldr] Enrutadores (routers)
+>[!tldr] Enrutadores (Routers)
 >Los routers son dispositivos de hardware que desempeñan funciones de nivel superior en la red. Ubicados en el tercer nivel del modelo OSI, son responsables de realizar el enrutamiento de paquetes y optimizar su dirección. Además, gestionan el control y filtrado del tráfico, mantienen tablas de routers adyacentes y de las redes LAN dentro de la red, y permiten segmentar la red en subredes.
+
