[Refactor] Corrections in 9.1 DB

--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -2,7 +2,7 @@ Una transacción es una unidad de programa que accede y posiblemente actualiza v
 Las transacciones poseen las siguientes propiedades:
 
 - **Atomicidad**: Los cambios provocados por una transacción o se completan todos (commit), o se deshacen todos (rollback).
-- **Consistencia**: Las bases de datos asegura que cualquier transacción llevará a la base de datos de un estado válido a otro estado válido, manteniendo siempre las reglas de integridad definidas
+- **Consistencia**: Las bases de datos asegura que cualquier transacción llevará a la base de datos de un estado válido a otro estado válido, manteniendo siempre las reglas de integridad definidas.
 - **Aislamiento**: Los resultados de una transacción son invisibles para el resto de transacciones de otros procesos hasta que la transacción sea completada.
 - **Durabilidad**: Una vez una transacción ha sido completada, los resultados, es decir, los cambios de la transacción se hacen permanentes.
 
@@ -33,10 +33,10 @@ Los fallos producidos al momento de realizar transacciones pueden ser recuperado
 - **Valor nuevo**: Valor del dato después de la escritura.
 - **Otros registros**: Graban procesos especiales durante la transacción: $<T_i \ Starts>$ comienzo de una transacción, $<T_i \ Commits>$ el cometido y $<T_i \ Abort>$ el aborto de una transacción.
 
-En las bitácoras cada vez que se inicia una transacción se registra esta misma de la siguiente manera $<T_i \ Starts>$, posteriormente asientan en el archivo los registros modificados, como ya hemos mencionado anteriormente los registros en los logs files poseen la siguiente estructura $<T_i, X_j, V_1, V_2>$, donde $T_i$ es la transacción en la que se realiza la operación de escritura, $X_j$ es el registro que se actualizo, $V_1$ es el valor antiguo de dicho registro y $V_2$ es el nuevo valor que este poseerá luego de la escritura. Una vez asentados todos los registros que fueron actualizados se indica en el archivo la finalizacion de la tranzación con el siguiente registro $< T_i \ Commits>$.
-Las modificaciones que se realizan dentro de las transacciones pueden realizarse de dos manera:
+En las bitácoras cada vez que se inicia una transacción se registra esta misma de la siguiente manera $<T_i \ Starts>$, posteriormente asientan en el archivo los registros modificados, como ya hemos mencionado anteriormente los registros en los logs files poseen la siguiente estructura $<T_i, X_j, V_1, V_2>$, donde $T_i$ es la transacción en la que se realiza la operación de escritura, $X_j$ es el registro que se actualizó, $V_1$ es el valor antiguo de dicho registro y $V_2$ es el nuevo valor que este poseerá luego de la escritura. Una vez asentados todos los registros que fueron actualizados se indica en el archivo la finalización de la transacción con el siguiente registro $< T_i \ Commits>$.
+Las modificaciones que se realizan dentro de las transacciones pueden realizarse de dos maneras:
 
-1. **Modificación Inmediata**: Permite las modificaciones no comprometidas, grabando las modificaciones en las base de datos, mientras la transacción está todavía en estado activo. Antes que $T_i$ comience su ejecución el registro $<T_i \ Starts>$ se escribe en la bitácora. Durante su ejecución cualquier operación de escritura que haga $T_i$, se escribe primero en la bitácora y luego en la bases de datos. Cuando $T_i$ esté parcialmente comprometida se grabará el registro $<T_i \ Commits>$ en la bitácora.
+1. **Modificación Inmediata**: Permite las modificaciones no comprometidas, grabando las modificaciones en las bases de datos, mientras la transacción está todavía en estado activo. Antes que $T_i$ comience su ejecución el registro $<T_i \ Starts>$ se escribe en la bitácora. Durante su ejecución cualquier operación de escritura que haga $T_i$, se escribe primero en la bitácora y luego en las bases de datos. Cuando $T_i$ esté parcialmente comprometida se grabará el registro $<T_i \ Commits>$ en la bitácora.
 
 >[!tldr] Recuperación de Datos - Modificación Inmediata
 >El esquema de recuperación utiliza dos procedimientos:
@@ -51,7 +51,7 @@ Las modificaciones que se realizan dentro de las transacciones pueden realizarse
 
 ## Gestión de Registros Intermedios
 
-La grabación en disco de los registros se hace en unidades de bloques, pero en la mayoría de los casos un registro de bitácora es mucho más pequeño que un bloque. Además la grabación de un bloque en memoria estable, puede corresponder a varias operaciones de grabación a nivel físico, esto hace que sea conveniente grabar varios registros de bitácora de una sola vez, debido a que se tiene que cumplir con los requisitos de atomicidad y durabilidad.
+La grabación en disco de los registros se hace en unidades de bloques, pero en la mayoría de los casos un registro de bitácora es mucho más pequeño que un bloque. Además, la grabación de un bloque en memoria estable, puede corresponder a varias operaciones de grabación a nivel físico, esto hace que sea conveniente grabar varios registros de bitácora de una sola vez, debido a que se tiene que cumplir con los requisitos de atomicidad y durabilidad.
 Para garantizar la atomicidad en las transacciones, es necesario seguir un orden específico en la grabación de los registros de bitácora:
 
 1. Antes de que se grabe en memoria estable el registro de bitácora $<T_i \ Commits>$ de una transacción $T_i$, deben haberse grabado previamente en memoria estable todos los registros de bitácora correspondientes a $T_i$.
@@ -59,12 +59,12 @@ Para garantizar la atomicidad en las transacciones, es necesario seguir un orden
 3. Antes de grabar en la base de datos un bloque que está en memoria principal, deben haberse grabado en disco todos los registros de bitácora que contienen los cambios de los datos de ese bloque.
 
 Este proceso asegura que todos los cambios realizados por una transacción se registran de manera segura y ordenada, manteniendo así la atomicidad de las transacciones.
-Por otro lado, para garantizar la durabilidad de las transacciones, es fundamental tener en cuenta que la memoria principal es mucho más pequeña que la memoria secundaria. Además, el intercambio de datos entre estas dos memorias puede ser costoso en términos de tiempo. Adicionalmente si no hay espacio disponible en los buffers intermedios para cargar un bloque, será necesario eliminar alguno de los bloques que se encuentran en la memoria principal. Es por esta razón que algunos sistemas de gestión de bases de datos implementan su buffer dentro de la memoria virtual del sistema operativo. La base de datos en sí se almacena en un sistema de archivos del sistema operativo, mientras que este último gestiona las transferencias entre los archivos, la base de datos y el registro intermedio en memoria virtual. Esto asegura que se cumplan los requisitos de durabilidad mencionados anteriormente.
+Por otro lado, para garantizar la durabilidad de las transacciones, es fundamental tener en cuenta que la memoria principal es mucho más pequeña que la memoria secundaria. Además, el intercambio de datos entre estas dos memorias puede ser costoso en términos de tiempo. Adicionalmente, si no hay espacio disponible en los buffers intermedios para cargar un bloque, será necesario eliminar alguno de los bloques que se encuentran en la memoria principal. Es por esta razón que algunos sistemas de gestión de bases de datos implementan su buffer dentro de la memoria virtual del sistema operativo. La base de datos en sí se almacena en un sistema de archivos del sistema operativo, mientras que este último gestiona las transferencias entre los archivos, la base de datos y el registro intermedio en memoria virtual. Esto asegura que se cumplan los requisitos de durabilidad mencionados anteriormente.
 Generalmente, los gestores de bases de datos reservan parte de la memoria principal para utilizarla como buffers que ellos mismos gestionan, en lugar del sistema operativo. Esto se logra llamando a rutinas de bajo nivel del sistema operativo.
 
 ## Puntos de Verificación
 
-Ante un fallo en el sistema es necesario consultar la bitácora para determinar cuales son las transacciones que deben rehacerse y cuales necesitan deshacerse. El proceso de búsqueda consume tiempo y la mayor parte de las transacciones que, según el algoritmo, necesitan volver a hacerse ya escribieron sus actualizaciones en la base de datos, si bien volver a hacerlas no cause daño, prolonga el proceso de recuperación. Es por eso que periódicamente o cuando ocurre un fallo, el sistema lleva a cabo el siguiente conjunto de acciones:
+Ante un fallo en el sistema es necesario consultar la bitácora para determinar cuáles son las transacciones que deben rehacerse y cuáles necesitan deshacerse. El proceso de búsqueda consume tiempo y la mayor parte de las transacciones que, según el algoritmo, necesitan volver a hacerse ya escribieron sus actualizaciones en la base de datos, si bien volver a hacerlas no cause daño, prolonga el proceso de recuperación. Es por eso que periódicamente o cuando ocurre un fallo, el sistema lleva a cabo el siguiente conjunto de acciones:
 
 1. Graba en disco todos los registros de bitácora que actualmente residen en memoria principal.
 2. Graba en disco los bloques modificados de registros intermedios.
@@ -78,7 +78,7 @@ En el caso de que se esté utilizando una técnica de modificación diferida, no
 
 ### Doble Paginación
 
-La bases de datos está compuesta por una cantidad determinada de bloques de longitud fijas llamada ***páginas***. Las bases de datos poseen una tabla de paginación que contiene la dirección en disco de las páginas donde se almacenan los bloques. Para la recuperación de errores se puede optar por mantener dos tablas de paginación durante la vida de una transacción, una actual y su doble. Cuando comienza la transacción las dos tablas son idénticas, pero solo la tabla actual es la que recibe operaciones de escritura. La recuperación consiste en almacenar la tabla de paginación doble en disco de manera que el estado de la base de datos, antes de la transacción, pueda recuperarse es caso de una caída o abortó de una transacción. Cuando la transacción termina la tabla de paginación actual se guarda en discom convirtiendose en su doble.
+Las bases de datos está compuesta por una cantidad determinada de bloques de longitud fijas llamada ***páginas***. Las bases de datos poseen una tabla de paginación que contiene la dirección en disco de las páginas donde se almacenan los bloques. Para la recuperación de errores se puede optar por mantener dos tablas de paginación durante la vida de una transacción, una actual y su doble. Cuando comienza la transacción las dos tablas son idénticas, pero solo la tabla actual es la que recibe operaciones de escritura. La recuperación consiste en almacenar la tabla de paginación doble en disco de manera que el estado de la base de datos, antes de la transacción, pueda recuperarse es caso de una caída o abortó de una transacción. Cuando la transacción termina la tabla de paginación actual se guarda en disco convirtiéndose en su doble.
 No es importante que la tabla de paginación actual se pierda en una caída, dado que el sistema de recuperación utiliza su doble para restablecer a su estado previo.
 Para comprometer una transacción, se deben seguir los siguientes pasos:
 
@@ -86,4 +86,4 @@ Para comprometer una transacción, se deben seguir los siguientes pasos:
 2. Grabar la tabla de paginación actual en el disco, sin sobrescribir su doble, ya que esta podría ser necesaria para la recuperación en caso de una caída.
 3. Grabar la dirección de la tabla de paginación actual en el disco, en la posición que anteriormente contenía la dirección de su doble.
 
-El principal problema de la doble paginación es que dificulta la implementación de la ejecución concurrente de las transacciones. Además requiere la implementación de un mecanismo de recolección de residuos para las tablas dobles que se descartan, así como para los bloques modificados, sin mencionar que la doble paginación puede llevar a una fragmentación de datos.
+El principal problema de la doble paginación es que dificulta la implementación de la ejecución concurrente de las transacciones. Además, requiere la implementación de un mecanismo de recolección de residuos para las tablas dobles que se descartan, así como para los bloques modificados, sin mencionar que la doble paginación puede llevar a una fragmentación de datos.
