--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -5,7 +5,7 @@ El éxito en la transmisión de datos depende fundamentalmente de dos factores f
 
 Un medio de transmisión puede ser ***simplex***, ***half-duplex*** o ***full-duplex***. En la transmisión simplex, las señales se transmiten solo en una única dirección. En los medios de transmisión half-duplex, ambas estaciones pueden transmitir, pero no simultáneamente. En full-duplex, ambas estaciones pueden igualmente transmitir y recibir, pero ahora simultáneamente.
 
->[!tldr] Enlaces Directos, Medios Punto a Punto y Multipunto
+>[!tldr] Enlaces Directos, medios Punto a Punto y Multipunto
 >El término ***enlace directo*** se usa para designar un camino de transmisión entre dos dispositivos en el que la señal se propague directamente del emisor al receptor sin ningún otro dispositivo intermedio que no sea un amplificador o repetidor.
 >Un medio de transmisión guiado es punto a punto si proporciona un enlace directo entre dos dispositivos que comparten el medio y no existiendo ningún otro dispositivo conectado. En una configuración guiada multipunto, el mismo medio es compartido por más de dos dispositivos.
 
