Data Mining | DB

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
@@ -14,7 +14,7 @@ La computación en el cálculo proposicional se basará en la eliminación de **
 - $\Box$: Representa todas las fórmulas bien formadas del tipo $¬A \wedge A$.
 
 En este caso cada fórmula bien formada se expresará en un formato que solo usa los conectivos $\{ ¬,\wedge ,\vee \}$, denominado ***forma normal conjuntiva reducida*** **(FNCR)**.
-Toda fórmula bien formada del cálculo proposicional puede ser reescrita, en forma equivalente, utilizando solo el conjunto de conectivos antes mostrado, ya que este es un conjunto suficiente de conectivos. Una forma normal es un “formato” estándar al que se puede llegar desde una fórmula bien formada arbitraria por medio de un proceso algorítmico. Si no se repiten letras proposicionales dentro de las cláusulas se dice que se tiene una Forma Normal Conjuntiva Reducida (FNCR).
+Toda fórmula bien formada del cálculo proposicional puede ser reescrita, en forma equivalente, utilizando solo el conjunto de conectivos antes mostrado, ya que este es un conjunto suficiente de conectivos. Una forma normal es un “formato” estándar al que se puede llegar desde una fórmula bien formada arbitraria por medio de un proceso algorítmico. Si no se repiten letras proposicionales dentro de las cláusulas se dice que se tiene una forma normal conjuntiva reducida.
 Una fórmula bien formada que usa los conectivos $\{ ¬,\wedge ,\vee \}$ está en forma normal conjuntiva si:
 
 1. Ninguna subfórmula bajo el conectivo $¬$ usa $\{ ¬,\wedge ,\vee, \tau, \Box \}$.
