Esquemas de codificación y correcciones | Redes-DB

--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -71,8 +71,9 @@ Ante un fallo en el sistema es necesario consultar la bitácora para determinar 
 3. Graba un registro de $<Checkpoint>$ en la bitácora.
 
 Para realizar el proceso de recuperación de errores utilizando puntos de verificación el sistema de gestión de base de datos busca la última transacción $T_i$ que no ha sido comprometida y que empezó a ejecutarse antes del último checkpoint y revierte los cambios. Formalmente, sea $T$ el conjunto de transacciones que incluyen a $T_i$ para todas las transacciones que comenzaron a ejecutarse luego de $T_i$ debe ejecutarse:
+
 1. **redo($T_k$)** para todas las transacciones $T_k$ en $T$, cuyo registro $<T_k \ Commits>$ aparezca en la bitácora.
-2. **undo($T_k$)** para todas las transacciones $T_k$ en $T$ cuyo registro $<T_k \ Commits>$ no aparezca en la bitácora.
+2. **undo($T_k$)** para todas las transacciones $T_k$ en $T$ cuyo registro $<T_k \ Commits>$ no aparezca en la bitácora. En caso de que la base de datos realice las modificaciones de manera inmediata.
 
 En el caso de que se esté utilizando una técnica de modificación diferida, no es necesario llevar a cabo el segundo paso.
 
