--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
@@ -138,6 +138,15 @@ Esta etiqueta identifica la VLAN a la que está destinada la trama. Al enviar un
 
 Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a traslados, adiciones y cambios en la red, un mejor control de multidifusión (broadcast) y una mayor seguridad tanto a nivel de grupo de trabajo como de red. Sin embargo, también presentan ciertas desventajas, como la necesidad de una configuración cuidadosa por software y el hecho de que cada switch o router debe invertir recursos de procesamiento para revisar el etiquetado de cada trama VLAN.
 
+>[!example] Maneras de Configurar una VLAN
+>Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas, las estaciones de trabajo conectadas a un puerto en particular pertenecerán siempre a la misma VLAN, a menos que se cambie manualmente la configuración, aunque existen varias formas de asignar estaciones de trabajo a una VLAN en este tipo:
+>- **Por puertos o interfaz**: Cada puerto del switch se asigna manualmente a una VLAN. Este es el método más común y que hemos mencionado anteriormente.
+>- **Por dirección física**: Se asignan las estaciones a las VLAN basándose en las direcciones MAC de los dispositivos conectados. El switch mantiene una tabla, se especifica qué dirección MAC corresponde a cada VLAN.
+>- **Por protocolo**: Se asignan las VLAN en función del protocolo que utiliza cada estación. El switch asigna a la VLAN correspondiente según el protocolo que reconoce.
+>- **Por dirección IP**: Se utiliza una tabla que asigna direcciones IP a VLAN específicas, de modo que los dispositivos que utilicen ciertas direcciones IP se integren a la VLAN correspondiente. Este método es el menos recomendado ya que las direcciones IP de los equipos puede ser cambiada facilmente.
+>
+>Por otro lado, en las VLAN dinámicas, el switch determina automáticamente a qué VLAN pertenece cada estación de trabajo basándose en su **dirección física (MAC)**, **dirección lógica (IP)** o **protocolo**. Esto significa que las estaciones pueden moverse dentro de la red, y el switch reasigna automáticamente la VLAN correcta según la configuración predefinida, brindando una mayor flexibilidad, ya que no requieren reconfiguraciones manuales cuando se cambian las estaciones de puerto o ubicación.
+
 ## World Interoperability for Microwave Access (WiMAX)
 
 WiMAX es una familia de estándares IEEE 802.16 que trata de suministrar datos inalámbricos a un gran número de usuarios en un área extensa, a velocidades capaces de competir con las de los modems por cable y las redes ADSL.
