--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -28,7 +28,7 @@ En la práctica, las señales electromagnéticas pueden estar compuestas por mú
 Se define el ***espectro*** de una señal como el conjunto de frecuencias que la constituyen. Se denomina ***ancho de banda absoluto*** de una señal a la anchura del espectro. Muchas señales tienen un ancho de banda infinito, pero la mayor parte de la energía de la señal se concentra en una banda de frecuencias relativamente estrecha. Esta banda se denomina ***ancho de banda efectivo*** o, simplemente, ancho de banda.
 
 >[!note] Velocidad de Transmisión y Ancho de Banda
->El ancho de banda efectivo se define como la banda en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
+>El ***ancho de banda efectivo*** se define como la banda en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
 >Existe una relación directa entre la velocidad de transmisión y el ancho de banda, ya que a mayor velocidad de transmisión, mayor es el ancho de banda necesario. Asimismo, cuanto mayor es el ancho de banda disponible, mayor es la velocidad a la que se pueden transmitir los datos. Además, el ancho de banda potencial de una señal aumenta con su frecuencia central, lo que permite mayores velocidades de transmisión.
 
 ## Transmisión de Datos Analógicos y Digitales
